--- a/Test_cucumber/Config/PropertyFiles/ApplicationProperty.properties
+++ b/Test_cucumber/Config/PropertyFiles/ApplicationProperty.properties
@@ -15,7 +15,7 @@ Mediware_Passdword=id;txtPassword
 LOGIN_ID=id;btnLogin
 APPLICATION_SELECTION=xpath;//img[@id="imgApp"]
 APPOINMENT=xpath;//a[@href='AppointmentView.aspx']
-TIME_SELECT=xpath;//div[@id='DocDiv1']//div[contains(@class,'AppNewSlot gray WCPer  NewEvent NewRegistration')]
+TIME_SELECT=xpath;//div[@id='DocDiv1']//div[contains(@class,'AppNewSlot gray WCPer  NewEvent ')]
 PATIENT_ID=xpath;//input[@id="txtSearchPatientID"]
 SEARCH=xpath;//button[@id='btnSearch']
 SELECT_PATIENT=id;grdPatients_imgEdit_0
